--- a/pricing.html
+++ b/pricing.html
@@ -149,7 +149,7 @@
           <div class="col-md-5 ml-auto pl-md-5">
             <span class="text-cursive h5 text-red">Praktische Informatie</span>
             <h3 class="text-black">Schooltijden</h3>
-            <p><span>Op onze school hebben we een continue rooster. Dit houdt in dat kinderen hun lunch op school nuttigen. Onze school heeft 's ochtends een inloop voor de groepen 1 en 2. Dit betekent dat de kinderen van deze groepen vanaf 08:15 uur met hun ouders binnen mogen komen. De ouders mogen dan tot 08:25 uur in de klas blijven. Vanaf eind groep 3 stimuleren we kinderen om zelf naar de klas toe te gaan.</br><br>Groep 1 en 2: maaandag, dinsdag & donderdag van 08:30 - 14:30 uur & woensdag en vrijdag van 08:30 - 14:30 uur</br></br>groep 3 tot en met 8: maandag, dinsdag, donderdag & vrijdag van 08:30 - 14:30 uur & woensdag van 08:30 - 12:15 uur.
+            <p><span>Op onze school hebben we een continue rooster. Dit houdt in dat kinderen hun lunch op school nuttigen. Onze school heeft 's ochtends een inloop voor de groepen 1 en 2. Dit betekent dat de kinderen van deze groepen vanaf 08:15 uur met hun ouders binnen mogen komen. De ouders mogen dan tot 08:25 uur in de klas blijven. Vanaf eind groep 3 stimuleren we kinderen om zelf naar de klas toe te gaan.</br><br>Groep 1 en 2: maaandag, dinsdag & donderdag van 08:30 - 14:00 uur & woensdag en vrijdag van 08:30 - 12:15 uur</br></br>groep 3 tot en met 8: maandag tot en met vrijdag van 08:30 - 14:00 uur 
 
             <p class="mt-5"><a href="#" class="btn btn-warning py-4 btn-custom-1">Download het Rooster</a></p>
           </div>
